--- a/packages.config
+++ b/packages.config
@@ -8,6 +8,8 @@
   <package id="DotNetOpenAuth.OAuth.Core" version="4.3.4.13329" targetFramework="net452" />
   <package id="DotNetOpenAuth.OpenId.Core" version="4.3.4.13329" targetFramework="net452" />
   <package id="DotNetOpenAuth.OpenId.RelyingParty" version="4.3.4.13329" targetFramework="net452" />
+  <package id="elmah.corelibrary" version="1.2" targetFramework="net452" />
+  <package id="Elmah.Mvc" version="2.1.2" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
   <package id="jQuery" version="2.2.0" targetFramework="net452" />
   <package id="jQuery.Validation" version="1.14.0" targetFramework="net452" />
