allow remote access for elmah log

--- a/Web.config
+++ b/Web.config
@@ -163,5 +163,8 @@
 		     It is also required to put the Uri class into RFC 3986 escaping mode, which OpenID and OAuth require. -->
 		<idn enabled="All" />
 		<iriParsing enabled="true" />
-	</uri><elmah>
-  </elmah></configuration>
+	</uri>
+  <elmah>
+    <security allowRemoteAccess="yes" />
+  </elmah>
+</configuration>
